--- a/SOSIEL EX1/Common/Common.csproj
+++ b/SOSIEL EX1/Common/Common.csproj
@@ -58,12 +58,12 @@
     <Compile Include="Entities\Goal.cs" />
     <Compile Include="Entities\GoalState.cs" />
     <Compile Include="Entities\IAgent.cs" />
-    <Compile Include="Entities\KnowledgeHeuristic.cs" />
-    <Compile Include="Entities\KnowledgeHeuristicAntecedentPart.cs" />
-    <Compile Include="Entities\KnowledgeHeuristicConsequent.cs" />
-    <Compile Include="Entities\KnowledgeHeuristicsHistory.cs" />
-    <Compile Include="Entities\KnowledgeHeuristicsLayer.cs" />
-    <Compile Include="Entities\KnowledgeHeuristicsLayerConfiguration.cs" />
+    <Compile Include="Entities\DecisionOption.cs" />
+    <Compile Include="Entities\DecisionOptionAntecedentPart.cs" />
+    <Compile Include="Entities\DecisionOptionConsequent.cs" />
+    <Compile Include="Entities\DecisionOptionsHistory.cs" />
+    <Compile Include="Entities\DecisionOptionLayer.cs" />
+    <Compile Include="Entities\DecisionOptionLayerConfiguration.cs" />
     <Compile Include="Entities\MentalModel.cs" />
     <Compile Include="Entities\MentalModelConfiguration.cs" />
     <Compile Include="Entities\Site.cs" />
@@ -107,7 +107,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_UseGlobalSettings="True" BuildVersion_StartDate="2017/3/6" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UpdateFileVersion="True" BuildVersion_BuildAction="Both" BuildVersion_ConfigurationName="Any" BuildVersion_BuildVersioningStyle="None.None.Increment.DayStamp" />
+      <UserProperties BuildVersion_BuildVersioningStyle="None.None.Increment.DayStamp" BuildVersion_ConfigurationName="Any" BuildVersion_BuildAction="Both" BuildVersion_UpdateFileVersion="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_StartDate="2017/3/6" BuildVersion_UseGlobalSettings="True" />
     </VisualStudio>
   </ProjectExtensions>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
