--- a/SOSIEL EX1/SOSIEL_EX1/SOSIEL_EX1.csproj
+++ b/SOSIEL EX1/SOSIEL_EX1/SOSIEL_EX1.csproj
@@ -46,8 +46,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AgentSubtype.cs" />
-    <Compile Include="SHELiteAgent.cs" />
-    <Compile Include="SHELiteAlgorithm.cs" />
+    <Compile Include="Agent.cs" />
+    <Compile Include="Algorithm.cs" />
     <Compile Include="Configuration\AgentStateConfiguration.cs" />
     <Compile Include="Configuration\AlgorithmConfiguration.cs" />
     <Compile Include="Configuration\ConfigurationModel.cs" />
@@ -59,9 +59,6 @@
     <Compile Include="AlgorithmVariables.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="configuration.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <Content Include="WhatsNew.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
