--- a/SOSIEL EX1/SOSIEL_EX1/SOSIEL_EX1.csproj
+++ b/SOSIEL EX1/SOSIEL_EX1/SOSIEL_EX1.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CsvHelper, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8c4959082be5c823, processorArchitecture=MSIL">
+      <HintPath>..\packages\CsvHelper.2.16.3.0\lib\net40\CsvHelper.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net40\Newtonsoft.Json.dll</HintPath>
@@ -48,17 +51,25 @@
     <Compile Include="AgentSubtype.cs" />
     <Compile Include="Agent.cs" />
     <Compile Include="Algorithm.cs" />
+    <Compile Include="AlgorithmProbabilityTables.cs" />
     <Compile Include="Configuration\AgentStateConfiguration.cs" />
     <Compile Include="Configuration\AlgorithmConfiguration.cs" />
     <Compile Include="Configuration\ConfigurationModel.cs" />
     <Compile Include="Configuration\ConfigurationParser.cs" />
     <Compile Include="Configuration\GoalStateConfiguration.cs" />
     <Compile Include="Configuration\InitialStateConfiguration.cs" />
+    <Compile Include="Configuration\ProbabilitiesConfiguration.cs" />
+    <Compile Include="Helpers\ProbabilityTableParser.cs" />
+    <Compile Include="Helpers\VariableTypeHelper.cs" />
+    <Compile Include="Models\ProbabilityRecord.cs" />
     <Compile Include="Output\AgentDetailsOutput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AlgorithmVariables.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="configuration.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="WhatsNew.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -70,6 +81,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="birth_probability.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="death_probability.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
