implement birth logic

--- a/SOSIEL EX1/SOSIEL_EX1/SOSIEL_EX1.csproj
+++ b/SOSIEL EX1/SOSIEL_EX1/SOSIEL_EX1.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Configuration\GoalStateConfiguration.cs" />
     <Compile Include="Configuration\InitialStateConfiguration.cs" />
     <Compile Include="Configuration\ProbabilitiesConfiguration.cs" />
+    <Compile Include="Helpers\DictionaryHelper.cs" />
     <Compile Include="Helpers\ProbabilityTableParser.cs" />
     <Compile Include="Helpers\VariableTypeHelper.cs" />
     <Compile Include="Models\ProbabilityRecord.cs" />
