--- a/SOSIEL EX1/Common/Common.csproj
+++ b/SOSIEL EX1/Common/Common.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Enums\SocialNetworkType.cs" />
     <Compile Include="Environments\ICloneable.cs" />
     <Compile Include="Helpers\AntecedentBuilder.cs" />
+    <Compile Include="Helpers\EventHelper.cs" />
     <Compile Include="Helpers\IEnumerableHelper.cs" />
     <Compile Include="Helpers\RandomizeHelper.cs" />
     <Compile Include="Helpers\ReflectionHelper.cs" />
@@ -95,7 +96,7 @@
     <Compile Include="Processes\ActionTaking.cs" />
     <Compile Include="Processes\AnticipatoryLearning.cs" />
     <Compile Include="Processes\CounterfactualThinking.cs" />
-    <Compile Include="Processes\Demographic\Demographic.cs" />
+    <Compile Include="Processes\Demographic.cs" />
     <Compile Include="Processes\Innovation.cs" />
     <Compile Include="Processes\SocialLearning.cs" />
     <Compile Include="Processes\VolatileProcess.cs" />
@@ -111,7 +112,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_UseGlobalSettings="True" BuildVersion_StartDate="2017/3/6" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UpdateFileVersion="True" BuildVersion_BuildAction="Both" BuildVersion_ConfigurationName="Any" BuildVersion_BuildVersioningStyle="None.None.Increment.DayStamp" />
+      <UserProperties BuildVersion_BuildVersioningStyle="None.None.Increment.DayStamp" BuildVersion_ConfigurationName="Any" BuildVersion_BuildAction="Both" BuildVersion_UpdateFileVersion="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_StartDate="2017/3/6" BuildVersion_UseGlobalSettings="True" />
     </VisualStudio>
   </ProjectExtensions>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
