--- a/SOSIEL EX1/SOSIEL_EX1/SOSIEL_EX1.csproj
+++ b/SOSIEL EX1/SOSIEL_EX1/SOSIEL_EX1.csproj
@@ -88,6 +88,9 @@
     <Content Include="death_probability.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="general_probability.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
