change innovation to work with probability table

--- a/SOSIEL EX1/SOSIEL_EX1/configuration.json
+++ b/SOSIEL EX1/SOSIEL_EX1/configuration.json
@@ -30,7 +30,7 @@
         "WithHeader": true
       },
       {
-        "Variable": "TestInnovation",
+        "Variable": "General",
         "VariableType": "integer",
         "FilePath": "general_probability.csv",
         "WithHeader": true
