--- a/SOSIEL EX1/SOSIEL_EX1/configuration.json
+++ b/SOSIEL EX1/SOSIEL_EX1/configuration.json
@@ -250,6 +250,7 @@
             "VariableValue": "IncomeFromGreenTourism"
           },
           "RequiredParticipants": 2,
+          "Scope": "Household", 
           "IsAction": true
         },
         {
