--- a/SOSIEL EX1/Common/Common.csproj
+++ b/SOSIEL EX1/Common/Common.csproj
@@ -98,6 +98,8 @@
     <Compile Include="Processes\AnticipatoryLearning.cs" />
     <Compile Include="Processes\CounterfactualThinking.cs" />
     <Compile Include="Processes\Demographic.cs" />
+    <Compile Include="Processes\GoalPrioritizing.cs" />
+    <Compile Include="Processes\GoalSelecting.cs" />
     <Compile Include="Processes\Innovation.cs" />
     <Compile Include="Processes\SocialLearning.cs" />
     <Compile Include="Processes\VolatileProcess.cs" />
@@ -113,7 +115,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_BuildVersioningStyle="None.None.Increment.DayStamp" BuildVersion_ConfigurationName="Any" BuildVersion_BuildAction="Both" BuildVersion_UpdateFileVersion="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_StartDate="2017/3/6" BuildVersion_UseGlobalSettings="True" />
+      <UserProperties BuildVersion_UseGlobalSettings="True" BuildVersion_StartDate="2017/3/6" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UpdateFileVersion="True" BuildVersion_BuildAction="Both" BuildVersion_ConfigurationName="Any" BuildVersion_BuildVersioningStyle="None.None.Increment.DayStamp" />
     </VisualStudio>
   </ProjectExtensions>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
