--- a/SOSIEL EX1/SOSIEL_EX1/configuration.json
+++ b/SOSIEL EX1/SOSIEL_EX1/configuration.json
@@ -1,6 +1,7 @@
 ﻿{
   "AlgorithmConfiguration": {
     "NumberOfIterations": 10,
+    "UseDimographicProcesses": false,
 
     "DemographicConfiguration": {
       "MaximumAge": 110,
