--- a/SOSIEL EX1/SOSIEL_EX1/SOSIEL_EX1.csproj
+++ b/SOSIEL EX1/SOSIEL_EX1/SOSIEL_EX1.csproj
@@ -7,12 +7,16 @@
     <ProjectGuid>{0895920B-DA02-46C8-858F-DA7B815BCF29}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SHELite</RootNamespace>
-    <AssemblyName>SHELite</AssemblyName>
+    <RootNamespace>SOSIEL_EX1</RootNamespace>
+    <AssemblyName>SOSIEL_EX1</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AssemblyVersion>1.0.1.6503</AssemblyVersion>
+    <AssemblyVersion>1.0.5.6762</AssemblyVersion>
     <TargetFrameworkProfile />
+    <AssemblyInfoFilePath>Properties\AssemblyInfo.cs</AssemblyInfoFilePath>
+    <UpdateAssemblyVersion>False</UpdateAssemblyVersion>
+    <UpdateAssemblyFileVersion>False</UpdateAssemblyFileVersion>
+    <UpdateAssemblyInfoVersion>False</UpdateAssemblyInfoVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
