--- a/SOSIEL EX1/SOSIEL_EX1/configuration.json
+++ b/SOSIEL EX1/SOSIEL_EX1/configuration.json
@@ -78,7 +78,7 @@
           "Layer": {
             "1": {
               "Modifiable": false,
-              "MaxNumberOfRules": 7
+              "MaxNumberOfDecisionOptions": 7
             }
           }
         }
