Optimize random number generation algorithm

--- a/SOSIEL EX1/Demo/Demo.csproj
+++ b/SOSIEL EX1/Demo/Demo.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -26,5 +26,11 @@
   <ItemGroup>
     <ProjectReference Include="..\SOSIEL\SOSIEL.csproj" />
     <ProjectReference Include="..\SOSIEL_EX1\SOSIEL_EX1.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Run.bat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
